# mujoco2blender

./: README.md  extracted_qpos_sequences.txt  mjmodel_locomotion.xml  mjmodel_simplemodel.xml  mujoco_importer_body_geom_site_new.py  mujoco_importer_body_geom_site_old.py  test.txt
MS-Human-700-Internal/: .gitignore  .gitmodules  README.md  pyproject.toml
MS-Human-700-Internal/agents/configs/: fullbody.json  legs.json  locomotion.json  manipulation.json
MS-Human-700-Internal/environments/: env_test.py  test.py
MS-Human-700-Internal/environments/msmodel_gym/: __init__.py
MS-Human-700-Internal/models/: MS-Human-700-Complex.xml  MS-Human-700-Legs.xml  MS-Human-700-Locomotion (copy).xml  MS-Human-700-Locomotion.xml  MS-Human-700-Manipulation.xml  README.md
MS-Human-700-Internal/models/Asset/: Asset_Lowerbody.xml  Asset_Others.xml  Asset_Torso.xml  Asset_Upperbody.xml
MS-Human-700-Internal/models/Body_Complex/: Body_Arm_Hand_l.xml  Body_Arm_Hand_r.xml  Body_Torso.xml
MS-Human-700-Internal/models/Body_Legs/: Body_Arm_l.xml  Body_Arm_r.xml  Body_Leg_Foot_l.xml  Body_Leg_Foot_r.xml  Body_Torso_Simple.xml
MS-Human-700-Internal/models/Body_Locomotion/: Body_Arm_l.xml  Body_Arm_r.xml  Body_Leg_Foot_l.xml  Body_Leg_Foot_r.xml  Body_Torso_Simple.xml
MS-Human-700-Internal/models/Body_Manipulation/: Body_Arm_Hand_Vis_l.xml  Body_Arm_Hand_r.xml  Body_Leg_Foot_Vis_l.xml  Body_Leg_Foot_Vis_r.xml  Body_Torso_Unimanual.xml  Body_Waterbottle.xml
MS-Human-700-Internal/models/Contact/: Contact_Lowerbody.xml  Contact_Upperbody.xml  (+1 more)
MS-Human-700-Internal/page/: MS-Human.html
(+49 files in other folders)
