[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-human-700"
version = "0.1.0"
description = "MS-Human-700 Modeling and Simulation"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "gymnasium>=0.29.1",
    "mujoco>=3.1.2",
    "imageio>=2.31.1",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
]

[project.optional-dependencies]
dynsyn = [
    "stable_baselines3[extra]==2.3.2",
    "sb3_contrib==2.3.0",
    "moviepy==1.0.3",
    "gymnasium>=0.29.1",
    "tensorboard>=2.12.1"
]

[tool.setuptools]
packages = ["environments.msmodel_gym"]

[tool.setuptools.package-dir]
"environments.msmodel_gym" = "environments/msmodel_gym"